[package]
name = "speedy-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.speedy]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[features]
debug = [] # only use for single testcases, will cause timeouts when fuzzing

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

[profile.release]
debug = true
